<resources>
    <string name="app_name">商场导盲犬</string>
    <string name="b_mall">商场内部导航</string>
    <string name="b_market">超市内部导航</string>
    <string name="b_product">超市商品识别</string>
    <string name="b_setting">调节与帮助</string>
    <string name="b_end_mall">退出商场导航</string>
    <string name="b_end_market">退出超市导航</string>
    <string name="product_detail">商品详情</string>
    <string name="b_back">返回</string>
    <string name="starting_point">当前位置</string>
    <string name="b_take_photo">拍照识别</string>
    <string name="destination">目的地位置</string>
    <string name="b_voice_input">语音输入</string>
    <string name="b_search">确认搜索</string>
    <string name="result">匹配结果</string>
    <string name="from">从：</string>
    <string name="to">到：</string>
    <string name="confirm">确认</string>
    <string name="setting">调节</string>
    <string name="speed">语速：</string>
    <string name="slow_word">慢</string>
    <string name="mid_word">中</string>
    <string name="fast_word">快</string>
    <string name="voice_output">语音：</string>
    <string name="woman_word">标准女声</string>
    <string name="man_word">标准男声</string>
    <string name="help">帮助</string>
    <string name="b_fail_to_read">无法识别</string>
    <string name="b_suggestion">反馈建议</string>
    <string name="b_customer_service">联系客服</string>
    <string name="b_update">版本与更新</string>
    <string name="mail_click">点击使用邮箱发送\n请耐心等待邮件回复~</string>
    <string name="phone_call_click">点击使用电话拨打</string>
    <string name="common_problem">常见问题</string>
    <string name="quention_one">1、如何识别当前位置？\n&#160;&#160;&#8201;&#160;&#160;&#8201;点击当前位置中的拍照识别，打开相机，点击拍照，确认后即可完成当前位置识别。</string>
    <string name="quention_two">2、拍照识别无法识别当前位置怎么办？\n&#160;&#160;&#8201;&#160;&#160;&#8201;可以换一个角度进行拍照，如果依旧无法识别当前位置，可以尝试联系客服，或者发邮件进行反馈。</string>
    <string name="quention_three">3、没有搜索到目的地怎么办？\n&#160;&#160;&#8201;&#160;&#160;&#8201;可以联系客服，或者发邮件进行反馈哦，我们会及时对软件进行更新。</string>
    <string name="quention_four">4、为什么无法识别手上的拿着的商品？\n&#160;&#160;&#8201;&#160;&#160;&#8201;超市商品识别暂时只能识别在货架上的商品，暂时不能识别在手上的商品，请用户关注之后的版本更新哦~</string>


    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">f66cb08c</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有技术成果。科大讯飞是我国以语音技术为产业化方向的“国家863计划产业化基地".....</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传联系人/词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>

    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <string name="face_model_delete">人脸模型删除</string>

    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>


    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <!-- 语音评测 -->
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string name="CommonProblem">常见问题</string>
    <string name="feedback">如果有需要反馈的话，点击下方按钮可以发送邮件</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="iat_language_entries">
        <item>中文</item>
        <item>英语</item>
        <item>日语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>韩语</item>
    </string-array>
    <string-array name="iat_language_value">
        <item>zh_cn</item>
        <item>en_us</item>
        <item>ja_jp</item>
        <item>ru-ru</item>
        <item>es_es</item>
        <item>fr_fr</item>
        <item>ko_kr</item>
    </string-array>


    <!-- 语言 -->
    <string-array name="machine_entries">
        <item>鲁谷</item>
        <item>广州</item>
        <item>森华</item>
    </string-array>
    <string-array name="machine_values">
        <item>http://bj.voicecloud.cn/msp.do</item>
        <item>http://gz.voicecloud.cn/msp.do</item>
        <item>http://dx.xf-yun.com/msp.do</item>
    </string-array>

</resources>