<?xml version="1.0" encoding="utf-8"?>
<!--Linear Layout 完成设计-->
<!--背景色设置为 #FFFFFF-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingAndHelp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/dp_35"
            android:text="@string/b_setting"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_4">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_15"
    android:paddingRight="@dimen/dp_45"
    android:paddingLeft="@dimen/dp_45"
    android:paddingBottom="@dimen/dp_10">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/dp_30"
            android:text="@string/setting"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/sp_22" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <!--Orientation Horizontal 为了排版-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_40"
        android:paddingBottom="@dimen/dp_10">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="match_parent"
            android:id="@+id/speed"
            android:height="@dimen/dp_25"
            android:text="@string/speed"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/sp_18"/>

        <!--RelativeLayout 为了按钮文字上下排版-->
        <RelativeLayout
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_25"
            android:paddingRight="@dimen/dp_25">

            <!--按钮样式(background)未设 应存于drawable-->
            <Button
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:id="@+id/b_slow"
                android:height="@dimen/dp_20"/>

            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentBottom="true"
                android:id="@+id/slow_word"
                android:height="@dimen/dp_20"
                android:text="@string/slow_word"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16"/>

        </RelativeLayout>

        <!--RelativeLayout 为了按钮文字上下排版-->
        <RelativeLayout
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_25"
            android:paddingRight="@dimen/dp_25">

            <!--按钮样式(background)未设 应存于drawable-->
            <Button
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:id="@+id/b_mid"
                android:height="@dimen/dp_20"/>

            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentBottom="true"
                android:id="@+id/mid_word"
                android:height="@dimen/dp_20"
                android:text="@string/mid_word"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16"/>

        </RelativeLayout>

        <!--RelativeLayout 为了按钮文字上下排版-->
        <RelativeLayout
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_25"
            android:paddingRight="@dimen/dp_25">

            <!--按钮样式(background)未设 应存于drawable-->
            <Button
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:id="@+id/b_fast"
                android:height="@dimen/dp_20"/>

            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentBottom="true"
                android:id="@+id/fast_word"
                android:height="@dimen/dp_20"
                android:text="@string/fast_word"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16"/>

        </RelativeLayout>

    </LinearLayout>

    <!--Orientation Horizontal 为了排版-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_40"
        android:paddingBottom="@dimen/dp_10">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:id="@+id/voice_output"
            android:height="@dimen/dp_25"
            android:text="@string/voice_output"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/sp_18"/>

        <!--按钮样式(background)未设 应存于drawable-->
        <Button
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_25"
            android:id="@+id/b_woman"
            android:height="@dimen/dp_20"/>

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:id="@+id/woman_word"
            android:height="@dimen/dp_25"
            android:text="@string/woman_word"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_16"/>

        <!--按钮样式(background)未设 应存于drawable-->
        <Button
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_25"
            android:id="@+id/b_man"
            android:height="@dimen/dp_20"/>

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:id="@+id/man_word"
            android:height="@dimen/dp_25"
            android:text="@string/man_word"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_15"
        android:paddingRight="@dimen/dp_45"
        android:paddingLeft="@dimen/dp_45"
        android:paddingBottom="@dimen/dp_10">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/dp_30"
            android:text="@string/help"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/sp_22" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_100"
        android:paddingLeft="@dimen/dp_100">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_fail_to_read"
            android:text="@string/b_fail_to_read"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_100"
        android:paddingLeft="@dimen/dp_100">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_suggestion"
            android:text="@string/b_suggestion"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_100"
        android:paddingLeft="@dimen/dp_100">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_customer_service"
            android:text="@string/b_customer_service"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_100"
        android:paddingLeft="@dimen/dp_100">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_update"
            android:text="@string/b_update"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_80"
        android:paddingRight="@dimen/dp_80">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_setting_back"
            android:text="@string/b_back"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>

</LinearLayout>