<?xml version="1.0" encoding="utf-8"?>
<!--Linear Layout 完成设计-->
<!--背景色设置为 #FFFFFF-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Supermarket"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/market_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/dp_35"
            android:text="@string/b_market"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_4">

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_125"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_30"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_5">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/market_starting_point"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:height="@dimen/dp_25"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/starting_point"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20" />

        <!--RelativeLayout 为了按钮排版-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--框架样式(background)未设 应存于drawable-->
            <!--字(text)未设：动态-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <TextView
                android:id="@+id/market_starting_point_box"
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                android:height="@dimen/dp_170"
                android:text="helloworld"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_18" />

            <!--按钮样式(background)未设 应存于drawable-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <Button
                android:id="@+id/b_market_take_photo"
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/b_take_photo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_125"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_30"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_5">

        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <TextView
            android:id="@+id/market_destination"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:height="@dimen/dp_25"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/destination"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_20" />

        <!--RelativeLayout 为了按钮排版-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--框架样式(background)未设 应存于drawable-->
            <!--字(text)未设：动态-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <TextView
                android:id="@+id/market_destination_box"
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                android:height="@dimen/dp_170"
                android:text="helloworld"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_18" />

            <!--按钮样式(background)未设 应存于drawable-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <Button
                android:id="@+id/b_market_voice_input"
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/b_voice_input"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_35"
        android:paddingLeft="@dimen/dp_25"
        android:paddingRight="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_5">

        <!--RelativeLayout 为了按钮排版-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--按钮样式(background)未设 应存于drawable-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <Button
                android:layout_width="@dimen/dp_120"
                android:layout_height="match_parent"
                android:id="@+id/b_market_back"
                android:text="@string/b_back"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16"/>

            <!--按钮样式(background)未设 应存于drawable-->
            <!--字体(font family)未设-->
            <!--字颜色暂设 #000000-->
            <Button
                android:layout_width="@dimen/dp_120"
                android:layout_height="match_parent"
                android:id="@+id/b_market_search"
                android:text="@string/b_search"
                android:layout_alignParentRight="true"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/sp_16"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_70"
        android:paddingRight="@dimen/dp_70"
        android:paddingBottom="@dimen/dp_10">

        <!--按钮样式(background)未设 应存于drawable-->
        <!--字体(font family)未设-->
        <!--字颜色暂设 #000000-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/b_market_setting"
            android:text="@string/b_setting"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>


</LinearLayout>